# epub_with_python

./: .editorconfig  .gitignore  README.md  config.yml  pyproject.toml  tasks.py
src/: chapter-1.md  hello-epub-world.md  hello-epub-world.xhtml  nav.xhtml
src/OEBPS/: content.opf  hello-epub-world.xhtml  nav.xhtml  style.css
templates/: content.opf.j2  nav.xhtml.j2  xhtml.j2
templates/OEBPS/: content.opf.j2
tests/: test_epub_with_python.py
